--- a/multi-step-form/src/components/StepsContainer.css
+++ b/multi-step-form/src/components/StepsContainer.css
@@ -6,7 +6,21 @@
     background-size: cover;
     background-repeat: no-repeat;
 
-    padding-top: 30px;
+    padding-top: 10px;
     display: flex;
     justify-content: center;
+}
+
+@media screen and (min-width: 700px) {
+    .steps-container {
+        height: 400px;
+        width: 200px;
+        flex-direction: column;
+        justify-content: flex-start;
+        background-image: url("../assets/images/bg-sidebar-desktop.svg");
+        background-size: 100%;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+    }
 }
